# top_matrix_product

./: .gitignore
lab3/matrix-product/: CMakeLists.txt  blocksize_test.py  final_strong_scaling.py  rapport.md  strong_scaling.py
lab3/matrix-product/src/: CMakeLists.txt  main.cpp  main_right.cpp  verify.cpp
lab3/mesh/src/: main.cpp
